--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,39 +1,54 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
+# Name of the workflow - This will be displayed in the GitHub Actions tab
 name: CICD Pipeline ML Springboot Microservice App
 
+# Define when this workflow will run
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master" ]  # Triggers when code is pushed to master branch
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master" ]  # Triggers when a PR is created against master branch
 
+# Define the jobs that will run as part of this workflow
 jobs:
+  # The build job handles both building and deploying the application
   build:
+    # Specifies the type of runner that the job will run on
     runs-on: ubuntu-latest
-    # added permission block to fix graph dependency issue failing the build
+    
+    # Permissions needed for the job
     permissions:
-      contents: write
-      security-events: write
+      contents: write        # Allows the job to write to repository contents
+      security-events: write # Allows the job to write security events
       
+    # Sequential steps that make up the job
     steps:
+    # Step 1: Check out your repository code
     - uses: actions/checkout@v4
     
+    # Step 2: Set up Java environment
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v4  # Official GitHub Action for setting up Java
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+        java-version: '17'         # Java version to use
+        distribution: 'temurin'    # Distribution of Java to use (Eclipse Temurin)
+        cache: maven               # Caches Maven dependencies to speed up builds
     
+    # Step 3: Build your application with Maven
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean install       # Cleans the project and installs dependencies
     
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    # Step 4: Authenticate with Docker Hub
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2 # Official GitHub Action for Docker login
+      with:
+        # Use secrets stored in your GitHub repository
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    # Step 5: Build and push your Docker image
+    - name: Build and push Docker image
+      run: |
+        # Build the Docker image with a tag using the commit SHA for versioning
+        docker build -t prat1991/mlspringbootapp:${{ github.sha }} .
+        # Push the image to Docker Hub
+        docker push prat1991/mlspringbootapp:${{ github.sha }}
