--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,8 +42,8 @@ jobs:
       uses: docker/login-action@v2 # Official GitHub Action for Docker login
       with:
         # Use secrets stored in your GitHub repository
-        username: prat1991
-        password: Letmein1234.
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
     
     # Step 5: Build and push your Docker image
     - name: Build and push Docker image
